2023-01-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
	* inst/include/Rcpp/config.h (RCPP_DEV_VERSION): Idem

2023-01-24  Lukasz Laniewski-Wollk  <llaniewski@meil.pw.edu.pl>

	* R/RcppLdpath.R: CxxFlags() now quotes only non-standard paths on linux

2023-01-08  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/String.h: Address clang++-14 conversion warning
	* inst/include/Rcpp/sugar/functions/mean.h: Idem
	* inst/include/Rcpp/vector/Vector.h: Idem
	* src/attributes.cpp: Idem
	* src/date.cpp: Idem

2022-12-29  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/docker.yaml (jobs): Update several actions

2022-12-26  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/stale.yaml (jobs): Update actions/stale@v6

2022-11-14  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3

2022-10-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
	* inst/include/Rcpp/config.h (RCPP_DEV_VERSION): Idem

2022-10-27  Kevin Ushey  <kevinushey@gmail.com>

	* inst/tinytest/cpp/coerce.cpp: add coerce unit tests
	* inst/tinytest/test_coerce.R: idem

2022-10-25  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/internal/r_coerce.h (coerce_to_string<RAWSXP >):
	Replace last remaining sprintf with snprintf

2022-10-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
	* inst/include/Rcpp/config.h (RCPP_DEV_VERSION): Idem

	* R/Attributes.R (sourceCpp): Protect path to binary from spaces

2022-10-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
	* inst/include/Rcpp/config.h (RCPP_DEV_VERSION): Idem

	* inst/tinytest/test_dataframe.R (test.DataFrame.PushZeroLength): Add
	new test
	* inst/tinytest/cpp/DataFrame.cpp (DataFrame_PushOnEmpty): C++
	support for new test

2022-10-04  Dirk Eddelbuettel  <edd@debian.org>
