@@ -64,5 +64,7 @@ expect_silent(system(cmd), info="check that finalizer is NOT called on exit")
 
 if (packageVersion("tinytest") < "1.2.0") exit_file("Skip remainder on older test platform")
 
-writeLines(c("#define RCPP_USE_FINALIZE_ON_EXIT", code), file_path)
-expect_stdout(system(cmd), info="check that finalizer is called on exit")
+if (Sys.getenv("RunVerboseRcppTests") == "yes") {
+    writeLines(c("#define RCPP_USE_FINALIZE_ON_EXIT", code), file_path)
+    expect_stdout(system(cmd), info="check that finalizer is called on exit")
+}
